--- a/Machine_Learning/Spam_Text_Classifier/fcc_sms_text_classification.ipynb
+++ b/Machine_Learning/Spam_Text_Classifier/fcc_sms_text_classification.ipynb
@@ -5,6 +5,9 @@
       "execution_count": null,
       "metadata": {
         "id": "8RZOuS9LWQvv",
+        "kernelspec": {
+        "display_name": "Python 3",
+        "language": "python",
         "name": "python3"
       },
       "outputs": [],
